--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,17 @@
             "App\\": "src/"
         }
     },
-    "require": {}
+    "require": {
+        "moneyphp/money": "^4.2",
+        "guzzlehttp/guzzle": "^7.7",
+        "vlucas/phpdotenv": "^5.5"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.23",
+        "phpstan/phpstan": "^1.10"
+    },
+    "scripts": {
+        "run:csfixer": "vendor/bin/php-cs-fixer fix . -v",
+        "run:stan": "php -d memory_limit=384M ./vendor/phpstan/phpstan/phpstan analyse --level 8 ."
+    }
 }
