--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
             "App\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\": "tests/"
+        }
+    },
     "require": {
         "php": "^8.1",
         "moneyphp/money": "^4.2",
@@ -13,7 +18,8 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.23",
-        "phpstan/phpstan": "^1.10"
+        "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^10"
     },
     "scripts": {
         "run:csfixer": "vendor/bin/php-cs-fixer fix . -v",
